--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,8 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-body div{
+/* body div{
     max-width: 100%;
     padding: 0px 10px 0 10px;
     background-color: #dddddddd;
-}
+} */
